--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-intersection-observer": "^9.13.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.14.1"
   },
